# playlisded_vsti

./: .gitignore  .gitmodules  CMakeLists.txt  GUID NUMBER.txt  INSTALLER INFO.txt  License File EULA.txt  Playlisted2_Installer.iss  Playlisted2_iOS_Distribution.mobileprovision  apple nutrization.txt  asset sizes.txt  clap making instructions.txt  full code.txt  github clap library.txt  install_juce.cmake  ios_cert_base64.txt  ios_certificate.csr  ios_distribution.cer  ios_private_key.key  ios_provision_base64.txt  juce full sdk tree file.txt  mac version file tree.txt  mac_installer.sh  onstage prompt for chatgpt.txt  playlisted 2 small BMP FOR INSTALLER.psd  resources.rc  serial variables.txt  vlc file tree.txt  ymal full code.txt
.github/workflows/: build_au.yml  build_clap_mac.yml  build_mac.yml
BACKUP CODE/: CMakeLists.txt
BACKUP CODE/src/: AudioEngine.cpp  AudioEngine.h  EngineMain.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  RegistrationManager.cpp
BACKUP CODE/src/IPC/: SharedMemoryManager.h
BACKUP CODE/src/UI/: DebugConsole.h  DualHandleSlider.h  HeaderBar.cpp  LongPressDetector.h  MainComponent.cpp  ManualComponent.h  MediaPage.cpp  PlaylistComponent.h  PlaylistDataStructures.h  RegistrationComponent.h  StyledSlider.h
BACKUP CODE/src/engine/: NativeMediaPlayer_Apple.h  NativeMediaPlayer_Apple.mm  VLCMediaPlayer_Desktop.cpp  VideoSurfaceComponent.cpp
NEWEST RELEASES/Mac version/: How to intall_Mac.txt
NEWEST RELEASES/Mac version/Mac/AU/: CodeResources  Info.plist
NEWEST RELEASES/Mac version/Mac/AU/_CodeSignature/: CodeResources
NEWEST RELEASES/Mac version/Mac/Playlisted2.clap/Contents/: CodeResources  Info.plist
NEWEST RELEASES/Mac version/Mac/Playlisted2.clap/Contents/_CodeSignature/: CodeResources
NEWEST RELEASES/Windows version/: How to intall_Windows.txt
NEWEST RELEASES/Windows version/Windows/Playlisted2.CLAP/Contents/x86_64-win/: Playlisted2.exp  Playlisted2.lib
assets/: license.mid
cmake/: copy_vlc_runtime.cmake
src/: AppLogger.h  AudioEngine.cpp  AudioEngine.h  EngineMain.cpp  IOSettingsManager.cpp  IOSettingsManager.h  PluginEditor.cpp  RegistrationManager.h
src/IPC/: SharedMemoryManager.h
src/UI/: EffectToggleButton.h  HeaderBar.h  MainComponent.h  MediaPage.h  PlaylistComponent.cpp  PlaylistDataStructures.h  SignalLed.h  TrackBannerComponent.cpp  TrackBannerComponent.h
src/engine/: VLCMediaPlayer_Desktop.cpp  VLCMediaPlayer_Desktop.h  VideoSurfaceComponent.h
